# aes-intrinsics

./: .gitignore  CMakeLists.txt  Makefile  aes-intrinsics.c  aes-intrinsics.h  aes.c  aes.h  main.c  sha-intrinsics.c
include/: aes-intrinsics.h  aes.h  ccm.h  gcm-intrinsics.h  gcm.h  sha-intrinsics.h  sha256-intrinsics.h  sha256.h  utils-intrinsics.h  utils.h
lib/: aes-intrinsics.c  aes.c  ccm.c  gcm-intrinsics.c  gcm.c  sha-intrinsics.c  sha256-intrinsics.c  sha256.c  utils-intrinsics.c  utils.c
